--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "yarn compile",
     "compile": "typechain --target ethers-v5 --out-dir src/types 'abis/**/*.json'",
     "build": "tsc",
+    "lint": "eslint .",
     "test": "echo TODO"
   },
   "dependencies": {
@@ -30,11 +31,19 @@
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@typechain/ethers-v5": "^10.0.0",
     "@types/jest": "^27.5.1",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
     "@uniswap/sdk-core": "^3.0.1",
     "chai": "^4.2.0",
+    "eslint": "^8.16.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "ethers": "^5.1.3",
     "hardhat": "^2.9.6",
     "jest": "^28.1.0",
+    "prettier": "^2.6.2",
     "typechain": "^8.0.0",
     "typescript": "^4.6.4"
   }
