--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "tsc",
     "release": "semantic-release",
     "lint": "eslint .",
-    "test": "echo TODO"
+    "test": "jest"
   },
   "dependencies": {
     "chalk": "^5.0.1",
@@ -24,9 +24,11 @@
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "ethers": "^5.1.3",
     "hardhat": "^2.9.6",
-    "jest": "^28.1.0"
+    "jest": "^27"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.18.0",
+    "@babel/preset-typescript": "^7.17.12",
     "@ethersproject/abi": "^5.0.0",
     "@ethersproject/bytes": "^5.0.0",
     "@ethersproject/providers": "^5.0.0",
@@ -44,7 +46,7 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "ethers": "^5.1.3",
     "hardhat": "^2.9.6",
-    "jest": "^28.1.0",
+    "jest": "^27",
     "prettier": "^2.6.2",
     "semantic-release": "^19.0.2",
     "typechain": "^8.0.0",
