--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ethersproject/bytes": "^5.0.0",
     "@ethersproject/providers": "^5.0.0",
     "@nomiclabs/hardhat-ethers": "^2.0.6",
+    "@semantic-release/git": "^10.0.1",
     "@typechain/ethers-v5": "^10.0.0",
     "@types/jest": "^27.5.1",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
