--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,8 +1,22 @@
 {
     "branches": "main",
     "plugins": [
-        "@semantic-release/commit-analyzer",
-		"@semantic-release/release-notes-generator",
+        [
+            "@semantic-release/commit-analyzer",
+            {
+                "releaseRules": [
+                    {
+                        "type": "test",
+                        "release": "patch"
+                    },
+                    {
+                        "type": "docs",
+                        "release": "patch"
+                    }
+                ]
+            }
+        ],
+        "@semantic-release/release-notes-generator",
         [
             "@semantic-release/git",
             {
