fix: vary port to allow multiple hre instances

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,6 +19,9 @@ jobs:
 
       - run: yarn test
         if: success()
+      
+      - run: yarn test:e2e
+        if: success()
 
       - run: yarn release
         if: success()
