--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,5 +22,6 @@ jobs:
 
       - run: yarn install --frozen-lockfile
 
-      - id: test
-        run: yarn test
+      - run: yarn test
+
+      - run: yarn test:e2e
