--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build": "tsc",
     "release": "semantic-release",
     "lint": "eslint .",
-    "test": "jest"
+    "test": "jest test/",
+    "test:e2e": "jest e2e/ --setupFilesAfterEnv ./src/index.ts"
   },
   "dependencies": {
     "setimmediate": "^1.0.5"
@@ -23,7 +24,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "ethers": "^5.1.3",
     "hardhat": "^2.9.6",
-    "jest": "^27"
+    "jest": "^28.1.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.18.0",
@@ -46,7 +47,7 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "ethers": "^5.1.3",
     "hardhat": "^2.9.6",
-    "jest": "^27",
+    "jest": "^28.1.0",
     "prettier": "^2.6.2",
     "semantic-release": "^19.0.2",
     "typechain": "^8.0.0",
