--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
       "import": "./dist/node.js",
       "types": "./dist/types/hardhat.d.ts"
     },
-    "./core": {
-      "import": "./dist/core.js",
-      "types": "./dist/core.d.ts"
+    "./setup": {
+      "import": "./dist/setup.js",
+      "types": "./dist/setup.d.ts"
     },
     "./node": {
       "import": "./dist/node.js"
