--- a/package.json
+++ b/package.json
@@ -1,12 +1,28 @@
 {
-  "name": "@uniswap/hardhat-plugin-jest",
+  "name": "@uniswap/jest-environment-hardhat",
   "version": "1.0.0",
-  "description": "Injects a hardhat network into your jest environment",
-  "repository": "https://github.com/Uniswap/hardhat-plugin-jest",
+  "description": "A jest environment with hardhat built in",
+  "repository": "https://github.com/Uniswap/jest-environment-hardhat",
   "author": "Zach Pomerantz <zzmp@uniswap.org>",
   "license": "GPL-3.0-or-later",
-  "main": "dist/index.js",
+  "main": "dist/node.js",
   "types": "dist/types/hardhat.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/node.js",
+      "types": "./dist/types/hardhat.d.ts"
+    },
+    "./setup": {
+      "import": "./dist/setup.js",
+      "types": "./dist/setup.d.ts"
+    },
+    "./node": {
+      "import": "./dist/node.js"
+    },
+    "./jsdom": {
+      "import": "./dist/jsdom.js"
+    }
+  },
   "scripts": {
     "prepare": "yarn compile",
     "prepublishOnly": "yarn build",
@@ -15,7 +31,7 @@
     "release": "semantic-release",
     "lint": "eslint .",
     "test": "jest test/",
-    "test:e2e": "jest e2e/ --setupFilesAfterEnv ./src/index.ts"
+    "test:e2e": "jest e2e/"
   },
   "dependencies": {
     "setimmediate": "^1.0.5"
@@ -24,7 +40,9 @@
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "ethers": "^5.1.3",
     "hardhat": "^2.9.6",
-    "jest": "^28.1.0"
+    "jest": ">=27",
+    "jest-environment-jsdom": ">=27",
+    "jest-environment-node": "^>=27"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.18.0",
@@ -48,6 +66,8 @@
     "ethers": "^5.1.3",
     "hardhat": "^2.9.6",
     "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
+    "jest-environment-node": "^28.1.0",
     "prettier": "^2.6.2",
     "semantic-release": "^19.0.2",
     "typechain": "^8.0.0",
