--- a/package.json
+++ b/package.json
@@ -40,9 +40,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "ethers": "^5.1.3",
     "hardhat": "^2.9.6",
-    "jest": ">=27",
-    "jest-environment-jsdom": ">=27",
-    "jest-environment-node": "^>=27"
+    "jest": ">=27"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.18.0",
