--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,6 +20,9 @@ jobs:
       - run: yarn test
         if: success()
       
+      - run: yarn build
+        if: success()
+
       - run: yarn test:e2e
         if: success()
 
