--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "release": "semantic-release",
     "lint": "eslint .",
     "test": "jest test/",
-    "test:e2e": "jest e2e/ --testSequencer ./e2e/sequencer.js"
+    "test:e2e": "jest e2e/ --testSequencer ./e2e/sequencer.js --maxWorkers 2"
   },
   "dependencies": {
     "setimmediate": "^1.0.5"
