--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -23,5 +23,7 @@ jobs:
       - run: yarn install --frozen-lockfile
 
       - run: yarn test
+
+      - run: yarn build
 
       - run: yarn test:e2e
