fix: add secrets to test workflow

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,6 +19,8 @@ jobs:
 
       - run: yarn test
         if: success()
+        env:
+          JSON_RPC_PROVIDER: ${{ secrets.JSON_RPC_PROVIDER }}
       
       - run: yarn build
         if: success()
