build: use json rpc provider from env (#10)
* build: use json rpc provider from env

* fix: add secrets to workflows

* fix: add secrets to test workflow

* fix: json rpc provider misname

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,12 +19,16 @@ jobs:
 
       - run: yarn test
         if: success()
+        env:
+          JSON_RPC_PROVIDER: ${{ secrets.JSON_RPC_PROVIDER }}
       
       - run: yarn build
         if: success()
 
       - run: yarn test:e2e
         if: success()
+        env:
+          JSON_RPC_PROVIDER: ${{ secrets.JSON_RPC_PROVIDER }}
 
       - run: yarn release
         if: success()
