--- a/package.json
+++ b/package.json
@@ -14,8 +14,18 @@
     "build": "tsc",
     "release": "semantic-release",
     "lint": "eslint .",
-    "test": "jest test/",
+    "test": "jest src/ --coverage",
     "test:e2e": "jest e2e/ --testSequencer ./e2e/sequencer.js --maxWorkers 2"
+  },
+  "jest": {
+    "collectCoverageFrom": ["src/internal/**"],
+    "coverageThreshold": {
+      "global": {
+        "branches": 100,
+        "functions": 100,
+        "lines": 100
+      }
+    }
   },
   "dependencies": {
     "setimmediate": "^1.0.5"
