--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "test:e2e": "jest e2e/ --testSequencer ./e2e/sequencer.js --maxWorkers 2"
   },
   "jest": {
-    "collectCoverageFrom": ["src/internal/**"],
+    "collectCoverageFrom": [
+      "src/internal/**"
+    ],
     "coverageThreshold": {
       "global": {
         "branches": 100,
@@ -33,7 +35,7 @@
   "peerDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "ethers": "^5.1.3",
-    "hardhat": "^2.9.6",
+    "hardhat": "^2.10.1",
     "jest": ">=27"
   },
   "devDependencies": {
@@ -57,7 +59,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "ethers": "^5.1.3",
-    "hardhat": "^2.9.6",
+    "hardhat": "^2.10.1",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
     "jest-environment-node": "^28.1.0",
